# workflango

./: LICENSE  README.md  manage.py  pyproject.toml
tests/: models.py  settings.py  tests.py
workflango/: admin.py  apps.py  drf.py  exceptions.py  filters.py  filtersets.py  forms.py  mixins_tests.py  models.py  user_groups.py  views.py  views_mixins.py  wf_config.py  wf_transition.py
workflango/management/: utils.py
workflango/management/commands/: check_wf_config.py  check_wf_objects.py  init_wf_groups.py
workflango/migrations/: 0001_initial.py  0002_alter_state_next_state_alter_state_owner_and_more.py
workflango/templates/workflango/django/: workflow_state_unread_list.html
workflango/templates/workflango/sebastian/htmx/: confirm.html  detail.html  history.html  list.html
workflango/templates/workflow/: form_change_state.html  object_history.html  workflow_buttons.html  workflow_edit_btn.html  workflow_filters.html  workflow_state_detail.html  workflow_state_in_list.html  workflow_state_title.html  workflow_unread_btn.html
workflango/templatetags/: workflow_tags.py
